Fuente Dinamica permite busqueda por fecha de carga PlaceHolder de etiqueta para los hechos